# domoio_esp8266

./: .gitignore  CMakeLists.txt  Makefile.nodemcuv2  Makefile.sample  README.md  cantcoap.cpp  crypto.cpp  customizations.cpp.sample  customizations.h  customizations.h.sample  dht11.cpp  dht11.h  dht_watcher.cpp  domoio.cpp  domoio.h  domoio_core.h  domoio_esp2866.ino  flash.cpp  hlw8012_watcher.cpp  led.cpp  main.cpp  makeEspArduino.mk  message.cpp  message.h  port.cpp  reactduino.cpp  reactduino.h  scenes.h  serial.cpp  storage.cpp  storage.h  sysdep.h  tools.cpp  tools.h  watcher.cpp  watchers.h  wificonf.cpp  wificonf.h
examples/makefiles/: Makefile.nodemcuv2  Makefile.sonoff
src/: actions.cpp  actions.h  base64.cpp  cantcoap.h  crypto.cpp  domoio.cpp  domoio.h  domoio_core.h  flash.cpp  led.cpp  main.cpp  message.cpp  message.h  port.cpp  reactduino.h  scenes.h  storage.cpp  storage.h  tools.cpp  tools.h  watcher.cpp  watchers.h  wificonf.cpp
